--- a/demo/index.html
+++ b/demo/index.html
@@ -475,7 +475,7 @@ import {Alert} from 'patternfly-react-shims'
       <h1>When should I use a Web Component?</h1>
       <p>Web components are amongst the most versatile components on the web today. Here's some areas we suggest considering them:</p>
       <ul>
-        <li>Cross framework scenarios <br/> <i style="font-size: 12px">"I'm developing a component that I'd like to share in another application using a different framework"</i></li>
+        <li>Cross framework scenarios <br/> <i style="font-size: 12px">"I'm developing a component that I'd like to share in another application using a different framework."</i></li>
         <li>Complex Components <br/> <i style="font-size: 12px">"I'm writing a complex graphical UI component that I'd like to expose in a more general way (ex: d3.js)."</i></li>
         <li>Highly Specific Components <br/> <i style="font-size: 12px">"I'm writing a zip code dropdown selector. I'd like to write this once and make it work everywhere."</i></li>
         <li>Complex JS Animations<br/> <i style="font-size: 12px">"I'm writing a complex animation using the JS Web Animation API. I'd like to share this in a general way.'"</i></li>
@@ -510,6 +510,8 @@ import {Alert} from 'patternfly-react-shims'
         <li><a href="https://github.com/patternfly/patternfly-design">Design &amp; UX Github</a></li>
         <li><a href="http://blog.patternfly.org/">Patternfly Blog</a></li>
       </ul>
+      <p>We invite you to swing by the PatternFly table just outside this room. PatternFlyers will be there until 6:30 pm to answer all your questions and hear your thoughts about the project and community.</p>
+      <p>Thank you for attending the first PatternFly conference.  Just like with any good design project, we want to iterate and improve on our first release, and we can do that best with the input of our users (i. e. you!).  Please take a couple minutes to let us know what you think: <a href="http://bit.ly/PFLY2017">http://bit.ly/PFLY2017</a></p>
       <img class="logo-brand-image" src="img/logo-brand.svg" />
     </web-slide>
 
@@ -519,7 +521,9 @@ import {Alert} from 'patternfly-react-shims'
       <p>The Patternfly team would like to thank...</p>
       <ul>
         <li><a href="https://twitter.com/RedHatUXD">@RedHatUXD</a>, Red Hat</li>
+        <li><a href="https://twitter.com/RedHatUXD">@gsoc</a>, Google Summer of Code</li>
         <li><a href="https://twitter.com/rob_dodson">@rob_dodson</a>, Google</li>
+        <li>UXD Devs: Brian Leathem, Dan Labreque, Xuebin Dong, David Cabrera</li>
       </ul>
       <img style="margin:10px auto;" src="img/clapping.gif" width="266" height="200">
       <img class="logo-brand-image" src="img/logo-brand.svg" />
