--- a/demo/index.html
+++ b/demo/index.html
@@ -44,8 +44,9 @@
       <ul>
         <li>Web Component introduction &amp; Web Component standards</li>
         <li>Web Component framework interoperability &amp; React / Angular2 demos</li>
-        <li>Advanced framework concepts &amp; Javascript patterns</li>
-        <li>Closing notes and current discussion topics</li>
+        <li>Getting ready for production &amp; demo applications</li>
+        <li>Framework discussion and common use cases</li>
+        <li>Current research topics and closing notes</li>
       </ul>
       <br/>
       <div>Link to presentation: <a href="http://bit.do/pfcon2017">http://bit.do/pfcon2017</a></div>
