--- a/demo/index.html
+++ b/demo/index.html
@@ -65,7 +65,7 @@
 
     <!-- Carburetor -->
     <web-slide class="blue-bg photo-slide" data-transition="moveFromBottom">
-      <img class="curved-image" style="width: 537px; height: 678px;" src="img/carburetor.jpg" />
+      <img class="curved-image" style="width: 537px; height: 678px;" src="img/carburetor.JPG" />
     </web-slide>
 
 
