remove large gifs from distro

--- a/demo/index.html
+++ b/demo/index.html
@@ -468,9 +468,11 @@ let score = val || 0          // ✓ ok
           <li>The largest package distribution hub in the world, UPS Worldport, distributes 2M-4M inbound/outbound physical packages/day.</li>
           <li>By comparison, NPM now distributes 140M software packages/day.</li>
         </ul>
+        <!-- Only run locally! 
         <div class="flex-center">
             <img style="height:250px;" src="img/upsWorldport.gif"/>
         </div>
+      -->
       </web-slide>
 
     <web-slide class="green-bg" data-transition="moveFromBottom">
@@ -722,9 +724,11 @@ let score = val || 0          // ✓ ok
       <img class="ato-brand-image" src="img/ato2017.svg" />
     </web-slide>
 
+    <!-- only run locally!!
     <web-slide class="photo-slide" data-transition="moveFromBottom">
         <img src="img/zenGarden.gif"/>
     </web-slide>
+  -->
 
     <web-slide class="white-bg" data-transition="moveFromBottom">
       <h1>Betting on the web...</h1>
