--- a/demo/index.html
+++ b/demo/index.html
@@ -978,7 +978,7 @@ div { --color: green; }
           <h3>Add Hello Storybook Story Custom CSS</h3>
           <br/>
           <div class="text-center">
-            <img style="width: 516px; height: 339px;" src="img/HelloStoriesCSS.png" />
+            <img style="width: 516px; height: 339px;" src="img/helloStoriesCSS.png" />
           </div>
         </web-slide>
 
