--- a/demo/index.html
+++ b/demo/index.html
@@ -49,7 +49,7 @@
           <li>Repeatable tests with <b>Jest</b></li>
         </ul>
         <li><b>Build</b>: Ready for production? Using <b>storybook deployer</b> and <b>semantic releases</b></li>
-        <li><b>Web Platform</b>: going a step further on the future web platform</li>
+        <li><b>Web Platform</b>: Going a step further on the future web platform</li>
       </ul>
       <br/>
       <div>Link to presentation: <a href="http://bit.do/ato2017">http://bit.do/ato2017</a></div>
@@ -74,8 +74,8 @@
       <h1>Atomic Design</h1>
       <p><i>"We're not designing pages, we're designing systems of components"</i> - Stephen Hay</p>
       <ul>
-        <li><b>Atomic design</b> and <b>component driven development</b> a recurring theme</li>
-        <li>Each component does <b>only one thing</b>, and <b>one thing well</b></li>
+        <li><b>Atomic design</b> and <b>component driven development</b> is a recurring theme</li>
+        <li>Each component does <b>only one thing</b> and <b>one thing well</b></li>
         <li>Convergence on <b>ES6 modules</b> as the future driver of modularity for the web</li>
       </ul>
       <p>
@@ -102,10 +102,10 @@
     <web-slide class="blue-bg" data-transition="moveFromBottom">
         <h1>"Software as a Story"</h1>
         <ul>
-          <li>Develop individual states or visual UI tests as <b>"stories"</b>.</li>
-          <li>Test component interactions in <b>isolation</b>, then later in conjunction</li>
+          <li>Develop individual states or visual UI tests as <b>"stories"</b></li>
+          <li>Test component interactions in <b>isolation</b> then later in conjunction</li>
           <li>Includes a development server, flexible webpack build process, and interactive addons (<b>knobs</b>)</li>
-          <li>Build the documentation, as you write the code</li>
+          <li>Build the documentation as you write the code</li>
           <li>Deploys to <b>GitHub pages</b></li>
           <li>Supports some important frameworks:</li>
           <ul>
@@ -141,7 +141,7 @@
 
 
       <web-slide class="blue-bg no-pad" data-transition="moveFromBottom">
-          <h3>Add Index.js</h3>
+          <h3>Add index.js</h3>
           <br/>
           <div class="flex-center">
             <img class="curved-image" style="width: 550px; height: 322px;" src="img/IndexJs.png" />
@@ -189,7 +189,7 @@
       </web-slide>
 
     <web-slide class="blue-bg" data-transition="moveFromBottom">
-        <h1>Adding interaction to the Visual UI Tests (stories)</h1>
+        <h1>Adding Interaction to the Visual UI Tests (stories)</h1>
         <ul>
           <li>Storybook <b>Knobs</b> give us the ability to inject variables to the UI test:</li>
           <ul>
@@ -227,7 +227,7 @@
     </web-slide>
 
     <web-slide class="blue-bg no-pad" data-transition="moveFromBottom">
-        <h3>Basic Knobs Demo</h3>
+        <h3>Knobs Demo</h3>
         <br/>
         <div class="text-center">
           <img style="width: 544px; height: 380px;" src="img/knobs1-demo.gif" />
@@ -257,14 +257,14 @@
     </web-slide>
 
     <web-slide class="yellow-bg" data-transition="moveFromBottom">
-        <h1>Ensuring a maintainable codebase</h1>
+        <h1>Ensuring a Maintainable Codebase</h1>
         <p><i>"I'm not a great programmer; I'm just a good programmer with great habits."</i> - Kent Beck</p>
         <ul>
-          <li>Develop your personal recipee for clean code:</li>
+          <li>Develop your personal recipe for clean code:</li>
           <ul>
             <li>LINTER + FORMATTER + TESTS = CONSISTENT CODE </li>
           </ul>
-          <li>Comment any potentially confusing code, or better yet, rewrite the code so that it isn't confusing.</li>
+          <li>Comment any potentially confusing code, or better yet, rewrite the code so that it isn't confusing</li>
           <li><b>Locate</b> code quickly, <b>Identify</b> the code at a glance, keep the <b>Flattest</b> structure you can, and <b>Try</b> to be DRY</li>
           <li>Reduce surface area for bugs:</li>
           <ul>
@@ -274,7 +274,7 @@
               </i>
             </li>
           </ul>
-          <li>Ensure recipees are vetted as soon as the pull request is opened</li>
+          <li>Ensure recipes are vetted as soon as the pull request is opened</li>
         </ul>
         <div class="ato-section"><div>TEST</div></div>
         <img class="ato-brand-image" src="img/ato2017.svg" />
@@ -319,7 +319,7 @@
         <br/>
         <p>Linting requires patience. Prettier can help.</p>
         <ul>
-          <li>Over 40% of Javascript Standard style lint rules automatically fixed.</li>
+          <li>Over 40% of Javascript Standard style lint rules automatically fixed:</li>
           <ul>
             <li>
               <a href="https://gist.github.com/priley86/78093a1f37b39242096c13ddfbe3f701">https://gist.github.com/priley86/78093a1f37b39242096c13ddfbe3f701</a>
@@ -378,7 +378,7 @@ let score = val || 0          // ✓ ok
       </web-slide>
 
     <web-slide class="yellow-bg no-pad" data-transition="moveFromBottom">
-        <h3>Add ESLint configuration</h3>
+        <h3>Add ESLint Configuration</h3>
         <br/>
         <div class="flex-center">
           <img class="curved-image" style="width: 548px; height: 292px;" src="img/eslintrc.png" />
@@ -400,7 +400,7 @@ let score = val || 0          // ✓ ok
     </web-slide>
 
     <web-slide class="yellow-bg no-pad" data-transition="moveFromBottom">
-        <h3>ESLint demo</h3>
+        <h3>ESLint Demo</h3>
         <br/>
         <div class="text-center">
           <img style="width: 531px; height: 387px;" src="img/runlint.gif" />
@@ -408,7 +408,7 @@ let score = val || 0          // ✓ ok
       </web-slide>
 
     <web-slide class="yellow-bg no-pad" data-transition="moveFromBottom">
-        <h3>Prettier demo</h3>
+        <h3>Prettier Demo</h3>
         <br/>
         <div class="text-center">
           <img style="width: 585px; height: 387px;" src="img/prettier1.gif" />
@@ -418,13 +418,13 @@ let score = val || 0          // ✓ ok
     <web-slide class="yellow-bg" data-transition="moveToLeft">
         <h1>Javascript Linting</h1>
         <br/>
-        <p>Some other lint configs we also recommend:</p>
+        <p>Some other recommended lint configs:</p>
         <ul>
           <li>eslint-config-airbnb</li>
           <li>eslint-config-react-app</li>
           <li>eslint-plugin-jsx-a11y</li>
         </ul>
-        <p>For Angular2+ apps, you can use Codelyzer/Tslint w/ the <a href="https://angular.io/guide/styleguide">Angular Style Guide recommendations</a>:</p>
+        <p>For Angular2+ apps, you can use Codelyzer/Tslint with the <a href="https://angular.io/guide/styleguide">Angular Style Guide recommendations</a>:</p>
         <ul>
           <li><a href="https://www.npmjs.com/package/codelyzer#recommended-configuration">https://www.npmjs.com/package/codelyzer#recommended-configuration</a></li>
         </ul>
@@ -434,7 +434,7 @@ let score = val || 0          // ✓ ok
       </web-slide>
 
   <web-slide class="yellow-bg" data-transition="moveToLeft">
-      <h1>Testing with confidence</h1>
+      <h1>Testing with Confidence</h1>
       <br/>
       <p><i>"Before fixing a bug exposed by a high level test, you should replicate the bug with a unit test. Then the unit test ensures the bug stays dead."</i> - Martin Fowler</p>
       <div class="flex-center">
@@ -445,14 +445,14 @@ let score = val || 0          // ✓ ok
   </web-slide>
 
   <web-slide class="yellow-bg" data-transition="moveToLeft">
-      <h1>Snapshot testing with Jest</h1>
+      <h1>Snapshot Testing with Jest</h1>
       <br/>
       <p><i>"After migrating to Jest, our tests started running 6x faster. Running a single test went from about 5 seconds to almost instant."</i> - Rogelio Guzman, <i>Docker</i></p>
       <ul>
-        <li>Snapshots create a serialized file for your test which can easily be compared.</li>
+        <li>Snapshots create a serialized file for your test which can easily be compared</li>
         <li>Integrates with Babel</li>
-        <li>UI components often change in small and trivial ways. Snapshots are easy to write and effortless to update. </li>
-        <li>In many scenarios, snapshots can remove the need for a unit/integration test, however should not be seen as a complete replacement.</li>
+        <li>UI components often change in small and trivial ways. Snapshots are easy to write and effortless to update </li>
+        <li>In many scenarios, snapshots can remove the need for a unit/integration test; however, they should not be seen as a complete replacement</li>
       </ul>
       <br/>
       <div class="ato-section"><div>TEST</div></div>
@@ -469,7 +469,7 @@ let score = val || 0          // ✓ ok
     </web-slide>
 
   <web-slide class="yellow-bg no-pad" data-transition="moveFromBottom">
-      <h3>Add Babel configuration</h3>
+      <h3>Add Babel Configuration</h3>
       <br/>
       <div class="flex-center">
         <img class="curved-image" style="width: 608px; height: 253px;" src="img/babelrc.png" />
@@ -489,7 +489,7 @@ let score = val || 0          // ✓ ok
     </web-slide>
 
     <web-slide class="yellow-bg no-pad" data-transition="moveFromBottom">
-        <h3>Jest Snapshot demo</h3>
+        <h3>Jest Snapshot Demo</h3>
         <br/>
         <div class="text-center">
           <img style="width: 584px; height: 377px;" src="img/jestSnapshotDemo.gif" />
@@ -513,11 +513,11 @@ let score = val || 0          // ✓ ok
       </web-slide> 
 
     <web-slide class="green-bg" data-transition="moveFromBottom">
-        <h1>Package distribution automation </h1>
+        <h1>Package Distribution Automation </h1>
         <br/>
         <ul>
-          <li>The largest package distribution hub in the world, UPS Worldport, distributes 2M-4M inbound/outbound physical packages/day.</li>
-          <li>By comparison, NPM now distributes 140M software packages/day.</li>
+          <li>The largest package distribution hub in the world, UPS Worldport, distributes 2M-4M inbound/outbound physical packages/day</li>
+          <li>By comparison, NPM now distributes 140M software packages/day</li>
         </ul>
         
         <!--
@@ -533,9 +533,9 @@ let score = val || 0          // ✓ ok
       <br/>
       <p>Now we'll use Travis to automate the following:</p>
       <ul>
-        <li>Run our UI tests and ensure lint rules on every pull request.</li>
-        <li>Automatically release code to NPM and ensure semantic versioning. </li>
-        <li>Update our Storybook gh-pages automatically and push code for us.</li>
+        <li>Run our UI tests and ensure lint rules on every pull request</li>
+        <li>Automatically release code to NPM and ensure semantic versioning</li>
+        <li>Update our Storybook gh-pages automatically and push code for us</li>
       </ul>
       <br/>
       <div class="flex-center">
@@ -550,8 +550,8 @@ let score = val || 0          // ✓ ok
       <br/>
       <p>We'll use semantic-release to ensure the following:</p>
       <ul>
-        <li>Automated package publishing to NPM after every pull request is merged.</li>
-        <li>Standardized commit messages with Commitizen.</li>
+        <li>Automated package publishing to NPM after every pull request is merged</li>
+        <li>Standardized commit messages with Commitizen</li>
       </ul>
       <br/>
       <pre is="lang-javascript" theme="dark">
@@ -627,7 +627,7 @@ let score = val || 0          // ✓ ok
         </web-slide>
 
       <web-slide class="no-pad green-bg" data-transition="moveFromBottom">
-        <h3>Add commitlint config</h3>
+        <h3>Add Commitlint Config</h3>
         <br/>
         <div class="flex-center">
           <img class="curved-image" style="width: 677px; height: 298px;" src="img/addCommitLintConfig.png" />
@@ -637,7 +637,7 @@ let score = val || 0          // ✓ ok
       </web-slide>
 
     <web-slide class="green-bg no-pad" data-transition="moveFromBottom">
-      <h3>Add a commit with commitizen</h3>
+      <h3>Add a Commit with Commitizen</h3>
       <br/>
       <div class="text-center">
         <img style="width: 576px; height: 382px;" src="img/npmRunCommit.gif" />
@@ -645,7 +645,7 @@ let score = val || 0          // ✓ ok
     </web-slide>
 
     <web-slide class="green-bg no-pad" data-transition="moveFromBottom">
-      <h3>Git push</h3>
+      <h3>Git Push</h3>
       <br/>
       <div class="text-center">
         <img style="width: 520px; height: 345px;" src="img/gitPush.png" />
@@ -663,7 +663,7 @@ let score = val || 0          // ✓ ok
       </web-slide>
 
     <web-slide class="green-bg no-pad" data-transition="moveFromBottom">
-        <h3>Adding some Button styles</h3>
+        <h3>Adding some Button Styles</h3>
         <br/>
         <div class="text-center">
           <img style="width: 475px; height: 336px;" src="img/ButtonStyles.png" />
@@ -709,7 +709,7 @@ let score = val || 0          // ✓ ok
         </web-slide>
 
       <web-slide class="green-bg no-pad" data-transition="moveFromBottom">
-          <h3>Deploying to a branch</h3>
+          <h3>Deploying your Storybook to a Branch</h3>
           <br/>
           <div class="text-center">
             <img style="width: 642px; height: 318px;" src="img/rawgitDeploy.png" />
@@ -719,12 +719,12 @@ let score = val || 0          // ✓ ok
         </web-slide>
 
       <web-slide class="green-bg" data-transition="moveFromBottom">
-        <h1>Pushing code to GitHub automatically</h1>
+        <h1>Pushing Code to GitHub Automatically</h1>
         <br/>
         <p>We can configure deploy keys to securely publish code to GitHub within our Travis builds:</p>
         <ul>
-          <li>Enhance our release process to update gh-pages automatically.</li>
-          <li>Deploy keys are more secure than personal access tokens, as the key is attached directly to the repository instead of a personal user account. </li>
+          <li>Enhance our release process to update gh-pages automatically</li>
+          <li>Deploy keys are more secure than personal access tokens as the key is attached directly to the repository instead of a personal user account </li>
         </ul>
         <br/>
         <div class="ato-section"><div>BUILD</div></div>
@@ -824,10 +824,10 @@ let score = val || 0          // ✓ ok
       <h1>Betting on the web...</h1>
       <p><i>"People dont want to use your app. They want to be <b>done</b> using your app."</i> - Henrik Joreteg</p>
       <ul>
-        <li>65% of smartphone users download <b>zero</b> apps per month.</li>
-        <li>WebAssembly will give us near-native performance with C/C++ hooks.</li>
-        <li>WebBluetooth, WebAudio, WebGL, WebVR give native like hardware experiences.</li>
-        <li>PWAs give us native app experiences with offline capability for FREE.</li>
+        <li>65% of smartphone users download <b>zero</b> apps per month</li>
+        <li>WebAssembly will give us near-native performance with C/C++ hooks</li>
+        <li>WebBluetooth, WebAudio, WebGL, WebVR give native like hardware experiences</li>
+        <li>PWAs give us native app experiences with offline capability for FREE</li>
       </ul>
 
       <h2>Web Components are the future web module.</h2>
@@ -872,11 +872,11 @@ let score = val || 0          // ✓ ok
       <p><i>"Encapsulated styles are better for you as a developer, and better for you as a platform."</i></p>
       <p>Monica Dinculescu <a href="https://meowni.ca/posts/shadow-dom/">recently summarized</a> common CSS encapsulation strategies:</p>
       <ul>
-        <li data-enter="1">Better naming strategies, i.e. BEM.</li>
+        <li data-enter="1">Better naming strategies, i.e. BEM</li>
         <li data-enter="2">IFRAMES - you're joking, right?</li>
-        <li data-enter="3">CSS Modules - a smarter way of automating BEM.</li>
-        <li data-enter="4">CSS-in-JS: variations of directly manipulating style attributes, inline css, and compiled stylesheets.</li>
-        <li class="rainbow" data-enter="5">Shadow DOM: true CSS encapsulation.</li>
+        <li data-enter="3">CSS Modules - a smarter way of automating BEM</li>
+        <li data-enter="4">CSS-in-JS: variations of directly manipulating style attributes, inline css, and compiled stylesheets</li>
+        <li class="rainbow" data-enter="5">Shadow DOM: true CSS encapsulation</li>
       </ul>
       <div class="flex-center">
           <img style="border-radius: 50%; height:130px;" src="img/monica.jpeg"/>
@@ -890,8 +890,8 @@ let score = val || 0          // ✓ ok
       <h1>Shadow DOM</h1>
       <p>Shadow DOM gives you functional boundaries between DOM subtrees. <a href="http://jsfiddle.net/patrickriley/p1b6hcdh/5/">jsfiddle</a></p>
       <ul>
-        <li>Shadow roots create an encapsulated style boundary.</li>
-        <li>Slots are the mechanism to superimpose (transclude) custom content.</li>
+        <li>Shadow roots create an encapsulated style boundary</li>
+        <li>Slots are the mechanism to superimpose (transclude) custom content</li>
       </ul>
       <pre is="lang-javascript" theme="dark">
   class MyElement extends HTMLElement {
@@ -941,15 +941,15 @@ div { --color: green; }
     <web-slide class="purple-bg" data-transition="moveToLeft">
       <h1>Framework Communication</h1>
       <p> We communicate with the web component from the framework in three primary ways:</p>
-      <h3 style="margin-top:10px; margin-bottom: 5px;"> Events </h3>
+      <h3 style="margin-top:10px; margin-bottom: 5px;" data-enter="1"> Events </h3>
 <pre is="lang-javascript" theme="dark">
   this.modal.addEventListener('modal.show', this.monitorModalEvents, false);
 </pre>
-      <h3 style="margin-top:10px; margin-bottom: 5px;"> Attributes </h3>
+      <h3 style="margin-top:10px; margin-bottom: 5px;" data-enter="2"> Attributes </h3>
 <pre is="lang-markup" theme="dark">
 &lt;ui-tab title="Tab One" active&gt;&lt;/ui-tab&gt;
 </pre>
-      <h3 style="margin-top:10px; margin-bottom: 5px;"> DOM </h3>
+      <h3 style="margin-top:10px; margin-bottom: 5px;" data-enter="3"> DOM </h3>
 <pre is="lang-markup" theme="dark">
   &lt;ui-accordion-template id="collapseOne" aria-labelledby="headingOne"&gt;
     &lt;span slot="content" [class.bold]="bold" [innerHTML]="slot"&gt;&lt;/span&gt;
